# libnyquist

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  LICENSE  README.md  appveyor.yml  libnyquistConfig.cmake.in  midi-playback.md
cmake/: CXXhelpers.cmake
examples/libnyquist-example.xcodeproj/: project.pbxproj
examples/libnyquist-example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/libnyquist-example.xcodeproj/xcshareddata/xcschemes/: libnyquist.xcscheme
examples/libnyquist-examples.vcxproj/: libnyquist-examples.sln  libnyquist-examples.vcxproj
examples/libnyquist-examples.vcxproj/v120/: libnyquist-examples.sln  libnyquist-examples.vcxproj  libnyquist-examples.vcxproj.filters
examples/libnyquist-examples.vcxproj/v140/: libnyquist-examples.sln  libnyquist-examples.vcxproj  libnyquist-examples.vcxproj.filters
examples/libnyquist-examples.vcxproj/v141/: libnyquist-examples.sln  libnyquist-examples.vcxproj  libnyquist-examples.vcxproj.filters
examples/libnyquist-examples.xcworkspace/: contents.xcworkspacedata
examples/src/: AudioDevice.cpp  AudioDevice.h  Main.cpp  RingBuffer.h
include/libnyquist/: AudioDecoder.h  AudioDevice.h  CafDecoder.h  Common.h  Decoders.h  Dither.h  Encoders.h  FlacDecoder.h  IMA4Util.h  ModplugDecoder.h  Mp3Decoder.h  MusepackDecoder.h  NickPrototypes.h  OpusDecoder.h  PostProcess.h  RiffUtils.h  RingBuffer.h  VorbisDecoder.h  WavDecoder.h  WavEncoder.h  WavPackDecoder.h
libnyquist.vcxproj/: libnyquist.sln  libnyquist.vcxproj  libnyquist.vcxproj.filters
libnyquist.vcxproj/v120/: libnyquist.sln  libnyquist.vcxproj  libnyquist.vcxproj.filters
libnyquist.vcxproj/v140/: libnyquist.vcxproj  libnyquist.vcxproj.filters
libnyquist.vcxproj/v141/: libnyquist.sln  libnyquist.vcxproj  libnyquist.vcxproj.filters
libnyquist.xcodeproj/: project.pbxproj
libnyquist.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libnyquist.xcodeproj/xcshareddata/xcschemes/: libnyquist.xcscheme
src/: AudioDecoder.cpp  AudioDevice.cpp  CafDecoder.cpp  Common.cpp  Encoders.cpp  FlacDecoder.cpp  FlacDependencies.c  Main.cpp  ModplugDecoder.cpp  ModplugDependencies.cpp  Mp3Decoder.cpp  MusepackDecoder.cpp  MusepackDependencies.c  OpusDecoder.cpp  OpusDependencies.c  RiffUtils.cpp  VorbisDecoder.cpp  VorbisDependencies.c  WavDecoder.cpp  WavEncoder.cpp  WavPackDecoder.cpp  WavPackDependencies.c
test_data/2ch/44100/16/: test.wav.reapeaks
test_data/ad_hoc/: 44_16_mono.mpc  44_16_stereo.mpc  KittyPurr16_Mono.flac  KittyPurr16_Stereo.flac  KittyPurr24_Stereo.flac  KittyPurr8_Stereo.flac  KittyPurr8_Stereo_Dithered.flac  LR_Stereo.ogg.reapeaks  TestBeat_44_16_stereo-ima4.aiff  TestBeat_44_16_stereo-ima4.caf  TestBeat_Float32.wv  TestBeat_Float32_Mono.wv  TestBeat_Int16.wv  TestBeat_Int24.wv  TestBeat_Int24_Mono.wv  TestBeat_Int32.wv
test_data/mid/: migm1.mid  migm1.txt
test_data/mod/: fountain.mod  tales-06-swat.s3m
